--- a/public/js/crms/views/customer.html
+++ b/public/js/crms/views/customer.html
@@ -26,7 +26,7 @@
         </label>
         <label class="item item-input">
           <span class="input-label" translate="T_CRMS_CUSTOMER_MEMO"></span>
-          <input type="text" ng-model="customer.memo">
+          <textarea rows="5" ng-model="customer.memo"></textarea>
         </label>
         <label class="item">
           <button ng-disabled="!profileForm.$dirty" class="button button-block button-positive" type="submit" translate="T_CRMS_BTN_UPDATE"></button>
