--- a/public/js/accounts/views/menu.html
+++ b/public/js/accounts/views/menu.html
@@ -27,7 +27,7 @@
           <span translate="T_ACCOUNTS_RESETPASSWORD"></span>
         </ion-item>
         <ion-item menu-close href="#/account/userprofile/{{user._id}}" ng-if="user">
-          {{user.last_name}} {{user.first_name}}
+          {{user |fullname:' '}}
         </ion-item>
         <ion-item menu-close ng-if="user && user.permission.indexOf('admin')>=0" href="#/account/useradmin">
           <span translate="T_ACCOUNTS_USERADMIN"></span><i class="icon ion-person-add" style="color:rgb(255,0,0);" ng-if="applyflag"></i>
