--- a/public/js/crms/views/customers.html
+++ b/public/js/crms/views/customers.html
@@ -3,7 +3,7 @@
   <ion-content>
     <div class="list">
       <div class="item" ng-repeat="customer in customers track by $index">
-        <a ui-sref="crm.customer({id:customer._id})">{{customer.last_name}}{{customer.first_name?" "+customer.first_name:""}}</a>
+        <a ui-sref="crm.customer({id:customer._id})">{{customer |fullname:' '}}</a>
       </div>
     </div>
   </ion-content>
