--- a/public/js/projects/views/projects.html
+++ b/public/js/projects/views/projects.html
@@ -1,5 +1,8 @@
 <ion-view>
   <ion-nav-title translate="T_PROJECTS_LIST"></ion-nav-title>
+  <ion-nav-buttons side="right">
+    <a class="button" ui-sref="project.newproject()"><i class="icon ion-plus"></i></a>
+  </ion-nav-buttons>
   <ion-content>
     <div class="list">
       <div class="item item-divider" translate="T_PROJECTS_STATUS_TODO"></div>
