无效用户/客户不可选择

--- a/public/js/projects/views/choose_customer.html
+++ b/public/js/projects/views/choose_customer.html
@@ -20,7 +20,7 @@
             <ion-checkbox ng-repeat="customer in customers"
                           ng-model="customer.checked"
                           ng-checked="customer.checked"
-                          ng-if="customer.companyid == modalData.currentCompany">
+                          ng-if="customer.companyid == modalData.currentCompany && customer.valid">
               {{customer | fullname:' '}}
             </ion-checkbox>
           </div>
