--- a/public/js/calendars/views/d_calendar.html
+++ b/public/js/calendars/views/d_calendar.html
@@ -1,27 +1,29 @@
-<div class="card">
-  <div class="row">
-    <div class="col button button-positive" ng-click="showAttrs()">
-      {{ ::year }} - {{ ::month }}
-    </div>
-  </div>
-  <div class="row">
-    <div class="col button button-small button-stable" ng-repeat="dayname in weektitle">
-      {{ ::dayname }}
-    </div>
-  </div>
-  <div class="row" ng-repeat="week in weeks" ng-if="!extraInfo">
-    <div class="col button button-small {{day.class}}" ng-repeat="day in week track by $index">
-      {{ ::day.value }}
-    </div>
-  </div>
-  <div class="row" ng-repeat="week in weeks" ng-if="extraInfo">
-    <div class="col" ng-repeat="day in week track by $index">
-      <div class="row button button-small {{day.class}}">
-        <div class="col">
-          {{ ::day.value }}
-        </div>
+<div class="row" ng-repeat="calrow in cal track by $index">
+  <div class="col card" ng-repeat="cell in calrow track by $index">
+    <div class="row" ng-show="cell.year">
+      <div class="col button button-positive">
+        {{ ::cell.year }} - {{ ::cell.month }}
       </div>
-      <div class="row" ng-if="day.value">
+    </div>
+    <div class="row" ng-show="cell.year">
+      <div class="col button button-small button-stable" ng-repeat="dayname in weektitle">
+        {{ ::dayname }}
+      </div>
+    </div>
+    <div class="row" ng-repeat="week in cell.weeks track by $index" ng-if="calmode == 'simple'" ng-show="cell.year">
+      <div class="col button button-small {{day.class}}" ng-repeat="day in week track by $index" ng-click="click(cell.year, cell.month, day)">
+        {{ ::day.value }}
+      </div>
+    </div>
+    <div class="row" ng-repeat="week in cell.weeks track by $index" ng-if="calmode != 'simple'" ng-show="cell.year">
+      <div class="col" ng-repeat="day in week track by $index" ng-click="click(cell.year, cell.month, day)">
+        <div class="row button button-small {{day.class}}">
+          <div class="col">
+            {{ ::day.value }}
+          </div>
+        </div>
+        <div class="row" ng-if="day.value">
+        </div>
       </div>
     </div>
   </div>
