--- a/public/js/calendars/views/test.html
+++ b/public/js/calendars/views/test.html
@@ -3,11 +3,11 @@
     <h1 class="title">Ionic Blank Starter</h1>
   </ion-header-bar>
   <ion-content>
-    <calendar data-mode="simple"
+    <calendar data-mode="edit"
               data-start-day="Sun"
               data-year="2016"
               data-month="1"
-              data-columns="3"
+              data-columns="2"
               data-holiday="[[1],[8,9,10,11,12],[],[4],[2],[9,10],[],[],[15,16],[3,4,5,6,7],[],[]]"
               data-studyday="[[30],[],[26],[],[28],[],[30],[],[25],[],[26],[]]"
               data-workday="[[],[],[],[],[],[12],[],[],[18],[8,9],[],[]]"></calendar>
