工作日历编辑模式

--- a/public/js/calendars/views/test.html
+++ b/public/js/calendars/views/test.html
@@ -3,7 +3,7 @@
     <h1 class="title">Ionic Blank Starter</h1>
   </ion-header-bar>
   <ion-content>
-    <calendar data-mode="edit"
+    <calendar data-mode="edit_calendar"
               data-start-day="Sun"
               data-year="2016"
               data-month="1"
