--- a/public/js/homes/views/index.html
+++ b/public/js/homes/views/index.html
@@ -13,6 +13,9 @@
       <div class="col card" ng-click="jump('crm.companies');">
         <span translate="T_HOMES_ITEM_CRM"></span>
       </div>
+      <div class="col card" ng-click="jump('finance.overview');">
+        <span translate="T_HOMES_ITEM_FINANCE"></span>
+      </div>
       <div class="col card" ng-click="setting();">
         <span translate="T_HOMES_ITEM_SETTING"></span>
       </div>
