负荷管理模块

--- a/public/js/calendars/views/d_calendar.html
+++ b/public/js/calendars/views/d_calendar.html
@@ -9,24 +9,24 @@
     <div class="col card" ng-repeat="cell in calrow track by $index">
       <div class="row" ng-show="cell.year">
         <div class="col button button-positive">
-          {{ ::cell.year }} - {{ ::cell.month }}
+          {{ cell.year }} - {{ cell.month }}
         </div>
       </div>
       <div class="row" ng-show="cell.year">
-        <div class="col button button-small button-stable" ng-repeat="dayname in weektitle">
-          {{ ::dayname }}
+        <div class="col button button-small button-stable" ng-repeat="dayname in weektitle" ng-click="click(cell.year, cell.month, day)">
+          {{ dayname }}
         </div>
       </div>
       <div class="row" ng-repeat="week in cell.weeks track by $index" ng-if="calmode == 'view_calendar'" ng-show="cell.year">
         <div class="col button button-small {{day.class}}" ng-repeat="day in week track by $index" ng-click="click(cell.year, cell.month, day)">
-          {{ ::day.value }}
+          {{ day.value }}
         </div>
       </div>
       <div class="row" ng-repeat="week in cell.weeks track by $index" ng-if="calmode == 'edit_calendar'" ng-show="cell.year">
         <div class="col" ng-repeat="day in week track by $index" ng-click="click(cell.year, cell.month, day)">
           <div class="row button button-small {{day.class}}">
             <div class="col">
-              {{ ::day.value }}
+              {{ day.value }}
             </div>
           </div>
           <div class="row" ng-if="day.value">
