--- a/public/js/homes/views/index.html
+++ b/public/js/homes/views/index.html
@@ -16,6 +16,9 @@
       <div class="col card" ng-click="jump('finance.overview');">
         <span translate="T_HOMES_ITEM_FINANCE"></span>
       </div>
+      <div class="col card" ng-click="jump('calendar.calendar');">
+        <span translate="T_HOMES_ITEM_CALENDAR"></span>
+      </div>
       <div class="col card" ng-click="setting();">
         <span translate="T_HOMES_ITEM_SETTING"></span>
       </div>
