--- a/public/js/calendars/views/menu.html
+++ b/public/js/calendars/views/menu.html
@@ -20,6 +20,9 @@
         <ion-item menu-close href="#/calendar/calendar">
           <span translate="T_CALENDARS_CALENDAR"></span>
         </ion-item>
+        <ion-item menu-close href="#/calendar/workload">
+          <span translate="T_CALENDARS_WORKLOAD"></span>
+        </ion-item>
         <ion-item menu-close ng-click="goHome()">
           <span translate="T_CALENDARS_HOME"></span>
         </ion-item>
