--- a/public/js/calendars/views/calendar.html
+++ b/public/js/calendars/views/calendar.html
@@ -1,7 +1,5 @@
-<ion-pane>
-  <ion-header-bar class="bar-stable">
-    <h1 class="title">Ionic Blank Starter</h1>
-  </ion-header-bar>
+<ion-view>
+  <ion-nav-title translate="T_CALENDARS_CALENDAR"></ion-nav-title>
   <ion-content>
     <div class="buttons row">
       <button class="button col" ng-click="stepYear(-5)"><i class="icon ion-ios-rewind"></i></button>
@@ -10,11 +8,11 @@
       <button class="button col" ng-click="stepYear(1)"><i class="icon ion-arrow-right-b"></i></button>
       <button class="button col" ng-click="stepYear(5)"><i class="icon ion-ios-fastforward"></i></button>
     </div>
-    <calendar data-mode="view_calendar"
+    <calendar data-mode="view"
               data-start-day="Sun"
               data-year="{{current.year}}"
               data-month="1"
               data-columns="3"
               data-info="{{current.info}}"></calendar>
   </ion-content>
-</ion-pane>
+</ion-view>
